# prompt-challenges

./: LICENSE  README.md  pyproject.toml
prompt_engineering/: easy.py  main.py  medium.py  response.py
